--- a/house-web/src/main/resources/application.properties
+++ b/house-web/src/main/resources/application.properties
@@ -37,8 +37,9 @@ spring.freemarker.settings.default_encoding=UTF-8
 spring.freemarker.settings.auto_import=common/common.ftl as common
 
 file.path=F:/CodeDir/filePath/house/imgs
-file.prefix=http://localhost:8081/images
-domain.name=localhost:8090
+#file.prefix=http://localhost:8070/images
+file.prefix=http://localhost:8070/static/imgs
+domain.name=localhost:8070
 
 spring.mail.host=smtp.qq.com
 spring.mail.username=990536551@qq.com
