--- a/house-web/src/main/resources/application.properties
+++ b/house-web/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 server.port=8070
+#actuator
+#management.server.port=8071
+#management.endpoints.web.exposure.include=*
+
+#spring-boot-admin
+spring.boot.admin.client.url=http://localhost:8077
+
+
 #spring.datasource.url=jdbc:mysql://ubuntu-raspi:3306/house?useSSL=true&useUnicode=true&characterEncoding=utf8
 #spring.datasource.password=cr123456@CR
 #spring.datasource.username=houseuser
@@ -41,10 +49,18 @@ file.path=F:/CodeDir/filePath/house/imgs
 file.prefix=http://localhost:8070/static/imgs
 domain.name=localhost:8070
 
+# Single file max size  即单个文件大小
+multipart.maxFileSize=50Mb
+# All files max size      即总上传的数据大小
+multipart.maxRequestSize=50Mb
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size= 100MB
+
 spring.mail.host=smtp.qq.com
 spring.mail.username=990536551@qq.com
-spring.mail.password=hgkpwpuupvdhbefa
-#fgrvrxuxhrygbdid
+spring.mail.password=czizwwjjgplibbbd
+#kyksdcqanzaubffa
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
